src/main/java/com/example/library_application/task1_srp/errors/Message.java
package com.example.library_application.task1_srp.errors;



public class Message {
    public static final String BOOK_NOT_FOUND_MESSAGE = "BOOK IS NOT FOUND!";
    public static final String READER_NOT_FOUND_MESSAGE = "READER IS NOT FOUND!";
}
